- empyre/Makefile: updated 'clean' target

--- a/src/empyre/Makefile
+++ b/src/empyre/Makefile
@@ -5,3 +5,7 @@ clean:
 	$(MAKE) -C quests clean
 	$(MAKE) -C data clean
 	$(MAKE) -C combat clean
+	$(MAKE) -C town clean
+	$(MAKE) -C island clean
+	$(MAKE) -C sql clean
+	$(MAKE) -C ship clean
