Build: add packaging and setup files

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,12 @@
+PROJECT = empyre
+OUTDIR = /srv/repo/$(PROJECT)/
+VERSION = $(shell date +%Y%m%d%H%M)
+
+PYTHON = python3
+
+.PHONY: build version
+.PHONY: clean build rename-sdist sign release all
+
 all:
 
 clean:
@@ -9,14 +18,29 @@ push:
 	git push
 
 version:
-	@echo '__version__ = "'`git log -1 --format='%H' | cut -c 1-16`'"' > empyre/_version.py
-	@echo '__datestamp__ = "'`date +%Y%m%d-%H%M`-`whoami`'"' >> empyre/_version.py
+	@echo 'githash = "'`git log -1 --format='%H' | cut -c 1-16`'"' > $(PROJECT)/_version.py
+	@echo 'datestamp = "$(VERSION)"' >> $(PROJECT)/_version.py
 
-install: version build
-	sudo ./setup.py install
+build:
+	VERSION=$(VERSION) $(PYTHON) -m build --outdir $(OUTDIR)
 
-build: version
-	./setup.py build
+rename-sdist:
+	@for f in $(OUTDIR)/*.tar.gz; do \
+        	if [ -f "$$f" ] && echo "$$f" | grep -vq '\-src\.tar\.gz' ; then \
+                	mv "$$f" "$${f%.tar.gz}-src.tar.gz"; \
+			echo "Renamed $$f -> $${f%.tar.gz}-src.tar.gz"; \
+		fi \
+	done
 
-sdist: version
-	./setup.py sdist
+sign:
+	@for f in $(OUTDIR)/*; do \
+        	if [ -f "$$f" ] && [ ! -f "$$f.asc" ] && [ "$${f##*.}" != "asc" ]; then \
+                	gpg --armor --detach-sign "$$f"; \
+			echo "Signed $$f"; \
+		fi \
+	done
+
+release: clean version build rename-sdist sign
+
+sdist:
+	$(PYTHON) -m setup sdist --dist-dir /srv/repo/$(PROJECT)/
